CSS/style.css
/* ... */
.event-sidebar {
  background-color: var(--cc-white-sugar);
  height: 1000px;
}

.event-detailing .info-list {
  width: 90%;
  border-bottom: 1px solid var(--cc-grey-lighter);
  align-items: center;
}

.event-detailing .info-list:last-of-type {
  border-bottom: none;
}

.event-detailing {
  top: 40px;
  left: 0;
  width: 390px;
  max-width: 390px;
}

.event-title {
  margin-bottom: -30px;
}

.book-seat {
  display: flex;
  background-color: var(--cc-primary-bg);
  max-width: 60%;
  border-radius: var(--bs-border-radius);
}

.book-seat:hover {
  background-color: var(--cc-color-dark);
}

.book-seat:hover a:hover::after,
a:focus::after {
  transform: scale(0);
}

.book-seat a {
  color: var(--cc-white-sugar);
  text-decoration: none;
  font-size: 1.15rem;
  font-weight: var(--cc-body-font-weight);
}

.book-seat a:hover {
  color: var(--cc-bg-primary-lighter);
}

.share-event {
  width: 90%;
}

.share-event span {
  font-size: 20px;
}

.share-event h6 {
  font-size: 20px;
}

/*  ************************************************************************************
  COMING SOON
****************************************************************************************/
#coming-soon-section {
  background-color: var(--cc-white-off);
  background-image: linear-gradient(
    to right,
    var(--cc-bg-distinct-lighter) 100px,
    var(--cc-bg-primary-lighter) 300px,
    var(--cc-bg-primary-lighter) 1500px,
    var(--cc-bg-distinct-lighter)
  );
  min-height: 100vh;
  min-width: 100vw;
  width: 100vw;
  height: 100vh;
}

a.edu_theme::after {
  background-color: transparent;
}

.card-group > .card + .card {
  border-left: 1px solid #c1c2cc;
}

.edu_theme h2,
.edu_theme h1 {
  letter-spacing: -1px;
}

.not-found-msg {
  flex-direction: column;
}

.not-found-msg h1 {
  font-size: 128px;
}

.go-to-home {
  background-color: var(--cc-primary-bg);
}

a.go-to-home:hover {
  cursor: pointer;
  background-color: var(--cc-bg-dark);
}

a.go-to-home:hover input {
  cursor: pointer;
  background-color: var(--cc-bg-dark);
}

a.go-to-home::after {
  background-color: transparent;
}

#coming-soon-content {
  flex-direction: column;
}

/*  ************************************************************************************
  Gallery
****************************************************************************************/

.images {
  column-count: 4;
}

.images img {
  width: 100%;
  padding: 0;
  border: 5px solid var(--cc-bg-primary-lighter);
  border-radius: 5px;
  margin: 12px;
}

.img-item {
  position: relative;
}

.gallery-zoom-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: 0.5s;
  font-size: 2rem;
}

.hovered-content {
  position: absolute;
  bottom: 5px;
  left: 15px;
  z-index: 1;
  padding: 30px;
  transition: 0.5s;
  opacity: 0;
  color: white;
  background-color: var(--cc-primary-light);
  display: flex;
  width: 98.5%;
  height: 100%;
}

.hovered-content h6 {
  position: absolute;
  bottom: 20%;
  left: 25%;
}

.images a:hover {
  cursor: pointer;
}

.images a:hover img {
  transition: 0.5s;
  transform: scale(0.98);
  overflow: hidden;
}

.images a:hover .hovered-content {
  opacity: 0.8;
}

.images a::after {
  background-color: transparent;
}

.images img {
  transition: 3s;
}

.gallery-filter .btn.active {
  background-color: var(--cc-primary-bg);
  color: var(--cc-white-sugar);
  border-color: transparent;
  font-weight: bold;
}

.gallery-filter .btn {
  background-color: var(--cc-bg-primary-lighter);
  color: var(--cc-dark);
  border-color: transparent;
  font-weight: bold;
}

.gallery-filter .btn:hover {
  background-color: var(--cc-primary-light);
  color: var(--cc-white-sugar);
}

/*  ************************************************************************************
  Blog Details
****************************************************************************************/
#blog-details-section {
  margin: 30px 0 0 10%;
  padding: 0 2%;
}

.tag {
  flex: 1;
}

.meta {
  flex: 2;
}

.meta-time {
  flex: 1;
}
.meta-date {
  flex: 2;
}

.meta-location {
  flex: 4;
}

.meta h5 {
  font-size: 16px;
  margin: 0;
}

.author-meta img {
  border-radius: 100%;
}

.content-img img {
  max-width: 463px;
  max-height: 315px;
}

.blog-details--image {
  max-width: 1100px;
  max-height: 550px;
}

.blog-details--share span {
  font-size: 1.25rem;
}

.blog-details--share span.vicon-youtube,
.blog-details--share span.vicon-facebook {
  font-size: 1.5rem;
}

.blog-details--share a::after {
  background-color: transparent;
}

.blog-details--share h5 {
  margin: 0;
}

.pagination-prev,
.pagination-next {
  background-color: var(--cc-bg-primary-lighter);
  font-weight: bold;
  border-radius: 5px;
  color: var(--cc-bg-dark);
  min-height: 175px;
}

.pagination-prev:hover,
.pagination-next:hover {
  background-color: var(--cc-white-sugar);
  cursor: pointer;
  border-bottom: 1px solid var(--cc-primary);
}

.pagination-prev span,
.pagination-next span {
  font-size: 1.5rem;
}

.pagination-prev span,
.pagination-next span {
  flex: 1;
}

.pagination-prev p,
.pagination-next p {
  flex: 6;
}

.the-comment {
  border-bottom: 1px solid var(--cc-grey-lighter);
}
.comment-img {
  flex: 1;
}

.comment-img img {
  border-radius: 100%;
}

.comment-info {
  flex: 9;
}

.comment-info-date {
  font-weight: bold;
  font-size: 12px;
}

.comment-info-button h5 {
  color: var(--cc-color);
  font-size: 1.05rem;
  font-weight: bold;
  letter-spacing: -1px;
  margin: 0px;
}

.comment-info-button:hover h5 {
  color: var(--cc-primary);
  cursor: pointer;
}

a.comment-info-button::after {
  background-color: transparent;
}

.vicon-replay {
  display: block;
}

.vicon-replay--primary {
  display: none;
}

.comment-info-button:hover .vicon-replay--primary {
  display: block;
}

.comment-info-button:hover .vicon-replay {
  display: none;
}

a.comment-form--cancel {
  color: var(--cc-color);
}

a.comment-form--cancel:hover {
  color: var(--cc-primary);
  cursor: pointer;
}
/* ... */

